# pf2e-encounter-tracker-v2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  main.py  package-lock.json  package.json  pf2e-afflictions-spec.md  pf2e-command-vocabulary-spec.md  pf2e-conditions-library-spec.md  pf2e-creature-types-spec.md  pf2e-domain-events-spec.md  pf2e-effects-and-durations-spec.md  pf2e-hazards-spec.md  pf2e-llm-parser-spec.md  pf2e-party-members-spec.md  pf2e-spellcasting-spec.md  pf2e-tracker-v2-architecture-spec.md  pf2e-yaml-schema-spec.md  pyproject.toml  s.py  tsconfig.domain.json  vite.config.ts  witraz.py
.github/: PULL_REQUEST_TEMPLATE.md
design/: PF2e Encounter Tracker.html  README.md  condition-states.jsx  data.jsx  direction-a.jsx  direction-b-card.jsx  direction-b-shared.jsx  direction-b.jsx  radial-menu.jsx
docs/: cloudflare-pages.md  creature-schema-backlog.md  sample-creatures.yaml
scripts/: import-spells.ts  validate-creature-yaml.ts
src/: app.html  test-setup.ts
static/: robots.txt  sitemap.xml  spell-index.json
tiles_stl/: tile_001.stl  tile_002.stl  tile_003.stl  tile_004.stl  tile_005.stl  tile_006.stl  tile_007.stl  tile_008.stl  tile_009.stl  tile_010.stl  tile_011.stl  tile_012.stl  tile_013.stl  tile_014.stl  tile_015.stl  tile_016.stl  tile_017.stl  tile_018.stl  tile_019.stl  tile_020.stl  tile_021.stl  tile_022.stl  tile_023.stl  tile_024.stl  tile_025.stl  tile_026.stl  tile_027.stl  tile_028.stl  tile_029.stl  tile_030.stl  tile_031.stl  tile_032.stl  tile_033.stl  tile_034.stl  tile_035.stl  tile_036.stl  tile_037.stl  (+71 more)
(+343 files in other folders)
