[project]
name = "tracker-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manifold3d>=3.4.1",
    "mapbox-earcut>=2.0.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pypdf2>=3.0.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "trimesh>=4.12.2",
]
